--- a/react-project/package.json
+++ b/react-project/package.json
@@ -52,9 +52,12 @@
   },
   "dependencies": {
     "cross-env": "^5.2.1",
+    "css-loader": "^3.2.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.0.0",
     "styled-components": "^4.3.2",
     "webpack-jarvis": "^0.3.2"
   }
