--- a/react-project/package.json
+++ b/react-project/package.json
@@ -56,6 +56,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
+    "react-scripts": "^3.1.2",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
     "styled-components": "^4.3.2",
